Refactor : sonarQube 적용 후 코드 수정 ver.4